# now-playing

./: .gitignore  README.md  create_icon.py  package-lock.json  package.json
sidecar/src/: index.ts
sidecar/src/roon/: client.ts  transport.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  compositor.rs  main.rs  sidecar.rs  state.rs  tray.rs  types.rs
