[package]
name = "now-playing"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full", "time", "sync"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"

# Text rendering
ab_glyph = "0.2"

# Base64 decoding for artwork
base64 = "0.22"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
strip = true           # Strip symbols
panic = "abort"        # Smaller binaries
